changed icons and edited styles

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Nicholas Ruan</h2>
-							<p>Web Developer<br />
+							<p>Web Developer & Photographer<br />
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
@@ -28,12 +28,16 @@
 							<header class="major">
 								<h2>About Me</h2>
 								<p>Recent New York University gradute with a<br />
-								degree in Computer Science and minor in Studio Art<br /> and Web Development</p>
+								degree in Computer Science and minor in Studio Art<br /> and Web Development. </p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><span class="fab fa-java fa-4x"></span></li>
+								<li><span class="fab fa-js fa-4x"></span></li>
+								<li><span class="fab fa-node fa-4x"></span></li>
+								<li><span class="fab fa-react fa-4x"></span></li>
+								<li><span class="fab fa-html5 fa-4x"></span></li>
+								<li><span class="fab fa-css3-alt fa-4x"></span></li>
+								<!-- <li><span class="icon solid brands fa-node major style3"><span class="label">Dolor</span></span></li> -->
 							</ul>
 						</div>
 					</section>
@@ -43,22 +47,22 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
 								<h2>Project 1<br />
-								Toilet Project</h2>
-								<p>Project description along with buttons to access github repository</p>
+								Name of Project</h2>
+								<p>Project description along with links to access github repository</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>Project 2<br />
-								NLR photography</h2>
-								<p>Project description along with buttons to access github repository</p>
+								Name of Project</h2>
+								<p>Project description along with links to access github repository</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>Project 3<br />
 								Name of Project</h2>
-								<p>Project description along with buttons to access github repository</p>
+								<p>Project description along with links to access github repository</p>
 							</div>
 						</section>
 					</section>
@@ -66,9 +70,9 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="mailto:nicholas.ruan.nr@gmail.com" class="icon solid fa-envelope fa-2x"><span class="label">Email</span></a></li>
+							<li><a href="tel:646-830-3578" class="fas fa-phone fa-2x"><span class="label"></span></a></li>
+							<li><a href="https://linkedin.com/in/nicholas-ruan-b7a52a131/" class="icon brands fa-linkedin fa-2x"><span class="label">LinkedIn</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Nicholas Ruan 2019</li>
