added resume link

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 						<div class="inner">
 							<header class="major">
 								<h2>About Me</h2>
-								<p>Recent New York University gradute with a<br />
-								degree in Computer Science and minor in Studio Art<br /> and Web Development. </p>
+								<p>My name is Nicholas and I'm a recent <a href="https://www.nyu.edu/">New York University</a> graduate with a degree in Computer Science and minors in Studio Art and Web Development. I was born and raised in Hong Kong and lived in in Queensland, Australia for four years during my final few years of high school. I currently reside in New York City. I'm interested in many facets of software development and technology, but more specifically the intersection and integration of technology in healthcare and education.<br /><br /> Click <a href="./files/Nicholas_Ruan_Resume.pdf">here</a> to view my resume!</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="fab fa-java fa-4x"></span></li>
