--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<div class="inner">
 							<header class="major">
 								<h2>About Me</h2>
-								<p>My name is Nicholas and I'm a recent <a href="https://www.nyu.edu/">New York University</a> graduate with a degree in Computer Science and minors in Studio Art and Web Development. I was born and raised in Hong Kong and lived in in Queensland, Australia for four years during my final few years of high school. I currently reside in New York City. I'm interested in many facets of software development and technology, but more specifically the intersection and integration of technology in healthcare and education.<br /><br /> Click <a href="./files/Nicholas_Ruan_Resume.pdf">here</a> to view my resume!</p>
+								<p>My name is Nicholas and I'm a recent <a href="https://www.nyu.edu/" target="_blank">New York University</a> graduate with a degree in Computer Science and minors in Studio Art and Web Development. I was born and raised in Hong Kong and lived in in Queensland, Australia for four years during my final few years of high school. I currently reside in New York City. I'm interested in many facets of software development and technology, but more specifically the intersection and integration of technology in healthcare and education.<br /><br /> Click <a href="./files/Nicholas_Ruan_Resume.pdf" target="_blank">here</a> to view my resume!</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="fab fa-java fa-4x"></span></li>
@@ -57,21 +57,21 @@
 								<p>Project description along with links to access github repository</p>
 							</div>
 						</section>
-						<section class="spotlight">
+						<!-- <section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>Project 3<br />
 								Name of Project</h2>
 								<p>Project description along with links to access github repository</p>
 							</div>
-						</section>
+						</section> -->
 					</section>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="mailto:nicholas.ruan.nr@gmail.com" class="icon solid fa-envelope fa-2x"><span class="label">Email</span></a></li>
-							<li><a href="tel:646-830-3578" class="fas fa-phone fa-2x"><span class="label"></span></a></li>
-							<li><a href="https://linkedin.com/in/nicholas-ruan-b7a52a131/" class="icon brands fa-linkedin fa-2x"><span class="label">LinkedIn</span></a></li>
+							<li><a href="mailto:nicholas.ruan.nr@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="tel:646-830-3578" class="fas fa-phone"><span class="label"></span></a></li>
+							<li><a href="https://linkedin.com/in/nicholas-ruan-b7a52a131/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Nicholas Ruan 2019</li>
