updated git and demo icons

--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
 								<h2>Project 1<br />
-								Name of Project</h2>
-								<p>Project description along with links to access github repository</p>
+								Toilet Finder - Mobile Application (Android / iOS)</h2>
+								<p>Project description...</p><p><a href="https://github.com/nyu-software-engineering/spring-2019-toilet-finder" target="_blank" id="giticon"><span class="fab fa-github fa-2x"></span></a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>Project 2<br />
-								Name of Project</h2>
-								<p>Project description along with links to access github repository</p>
+								Photography Portfolio - Web Application</h2>
+								<p>Project description...</p><p><a href="#" target="_blank" id="giticon"><span class="fab fa-github fa-2x" style="padding-right: 20px;"></span></a><a href="#" target="_blank" id="giticon"><span class="fas fa-desktop fa-2x"></span></a></p>
 							</div>
 						</section>
 						<!-- <section class="spotlight">
