added new paragraph

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<div class="inner">
 							<header class="major">
 								<h2>About Me</h2>
-								<p>My name is Nicholas and I'm a recent <a href="https://www.nyu.edu/" target="_blank">New York University</a> graduate with a degree in Computer Science and minors in Studio Art and Web Development. I was born and raised in Hong Kong and lived in in Queensland, Australia for four years during my final few years of high school. I currently reside in New York City. I'm interested in many facets of software development and technology, but more specifically the intersection and integration of technology in healthcare and education.<br /><br /> Click <a href="./files/Nicholas_Ruan_Resume.pdf" target="_blank">here</a> to view my resume!</p>
+								<p>My name is Nicholas and I'm a recent <a href="https://www.nyu.edu/" target="_blank">New York University</a> graduate with a degree in Computer Science and minors in Studio Art and Web Development. I was born and raised in Hong Kong and lived in in Queensland, Australia for four years during my final few years of high school. I currently reside in New York City. I'm interested in many facets of software development and technology, but more specifically the intersection and integration of technology in healthcare and education.</p><p>Click <a href="./files/Nicholas_Ruan_Resume.pdf" target="_blank">here</a> to view my resume!</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="fab fa-java fa-4x"></span></li>
@@ -47,7 +47,7 @@
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
 								<h2>Project 1<br />
 								Toilet Finder - Mobile Application (Android / iOS)</h2>
-								<p>Project description...</p><p><a href="https://github.com/nyu-software-engineering/spring-2019-toilet-finder" target="_blank" id="giticon"><span class="fab fa-github fa-2x"></span></a></p>
+								<p>This application can be thought of as a map of all bathroom locations in the world. It works by using Google Maps and a database of user submitted locations of restrooms. Restrooms will have labels for easier filtering so that users can find a nearby restroom that will fulfill their needs. Users will also have the option to submit bathroom locations that they have found in order to increase the size of the database. In fact the bathroom locations will all be user provided.</p><p><a href="https://github.com/nyu-software-engineering/spring-2019-toilet-finder" target="_blank" id="giticon"><span class="fab fa-github fa-2x"></span></a></p>
 							</div>
 						</section>
 						<section class="spotlight">
