--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<div class="inner">
 							<header class="major">
 								<h2>About Me</h2>
-								<p>My name is Nicholas and I'm a recent <a href="https://www.nyu.edu/" target="_blank">New York University</a> graduate with a degree in Computer Science and minors in Studio Art and Web Development. I was born and raised in Hong Kong and lived in in Queensland, Australia for four years during my final few years of high school. I currently reside in New York City. I'm interested in many facets of software development and technology, but more specifically the intersection and integration of technology in healthcare and education.</p><p>Click <a href="./files/Nicholas_Ruan_Resume.pdf" target="_blank">here</a> to view my resume!</p>
+								<p>My name is Nicholas and I'm a recent <a href="https://www.nyu.edu/" target="_blank">New York University</a> graduate with a degree in Computer Science and minors in Studio Art and Web Development. I was born and raised in Hong Kong and lived in Queensland, Australia for four years during my final few years of high school. I currently reside in New York City and am looking to pursue a career in software engineering. I'm interested in many facets of software development and technology, but more specifically the intersection and integration of technology in visual art. Scroll below to have a look at some of the projects I have built.</p><p>Click <a href="./files/Nicholas_Ruan_Resume.pdf" target="_blank">here</a> to view my resume!</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="fab fa-java fa-4x"></span></li>
@@ -54,7 +54,7 @@
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>Project 2<br />
 								Photography Portfolio - Web Application</h2>
-								<p>Project description...</p><p><a href="#" target="_blank" id="giticon"><span class="fab fa-github fa-2x" style="padding-right: 20px;"></span></a><a href="#" target="_blank" id="giticon"><span class="fas fa-desktop fa-2x"></span></a></p>
+								<p>Coming Soon...</p><p><a href="#" target="_blank" id="giticon"><span class="fab fa-github fa-2x" style="padding-right: 20px;"></span></a><a href="#" target="_blank" id="giticon"><span class="fas fa-desktop fa-2x"></span></a></p>
 							</div>
 						</section>
 						<!-- <section class="spotlight">
