--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<div class="inner">
 							<header class="major">
 								<h2>About Me</h2>
-								<p>My name is Nicholas and I'm a recent <a href="https://www.nyu.edu/" target="_blank">New York University</a> graduate with a degree in Computer Science and minors in Studio Art and Web Development. I was born and raised in Hong Kong and lived in Queensland, Australia for four years during my final few years of high school. I currently reside in New York City and am looking to pursue a career in software engineering. I'm interested in many facets of software development and technology, but more specifically the intersection and integration of technology in visual art. Scroll below to have a look at some of the projects I have built.</p><p>Click <a href="./files/Nicholas_Ruan_Resume.pdf" target="_blank">here</a> to view my resume!</p>
+								<p>My name is Nicholas and I'm a recent <a href="https://www.nyu.edu/" target="_blank">New York University</a> graduate with a degree in Computer Science and minors in Studio Art and Web Development. I was born and raised in Hong Kong and lived in Queensland, Australia for four years during high school. I currently reside in New York City and am looking to pursue a career in software engineering. I'm interested in many facets of software development and technology, but more specifically the intersection and integration of technology in visual art. Scroll below to have a look at some of the projects I have built.</p><p>Click <a href="./files/Nicholas_Ruan_Resume.pdf" target="_blank">here</a> to view my resume!</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="fab fa-java fa-4x"></span></li>
