--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="landing is-preload">
@@ -53,7 +54,7 @@
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>Project 2<br />
 								Photography Portfolio - Web Application</h2>
-								<p>Coming Soon...</p><p><a href="#" target="_blank" id="giticon"><span class="fab fa-github fa-2x" style="padding-right: 20px;"></span></a><a href="#" target="_blank" id="giticon"><span class="fas fa-desktop fa-2x"></span></a></p>
+								<p>Coming Soon...</p><p><a href="https://github.com/nicholasruan/nlrphoto" target="_blank" id="giticon"><span class="fab fa-github fa-2x" style="padding-right: 20px;"></span></a><a href="http://nlart.me" target="_blank" id="giticon"><span class="fas fa-desktop fa-2x"></span></a></p>
 							</div>
 						</section>
 						<!-- <section class="spotlight">
