changed icon links

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<h2>Project 3<br />
 								Movie Wishlist - Web Application</h2>
 								<p>Coming Soon...</p>
-								<p><a href="#" target="_blank" id="giticon"><span class="fab fa-github fa-2x" style="padding-right: 20px;"></span></a><a href="http://nlart.me" target="_blank" id="giticon"><span class="fas fa-desktop fa-2x"></span></a></p>
+								<p><a href="#" target="_blank" id="giticon"><span class="fab fa-github fa-2x" style="padding-right: 20px;"></span></a><a href="#" target="_blank" id="giticon"><span class="fas fa-desktop fa-2x"></span></a></p>
 							</div>
 						</section>
 					</section>
