added a couple projects

--- a/index.html
+++ b/index.html
@@ -46,20 +46,34 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
 								<h2>Project 1<br />
-								Toilet Finder - Mobile Application (Android / iOS)</h2>
-								<p>This application can be thought of as a map of all bathroom locations in the world. It works by using Google Maps and a database of user submitted locations of restrooms. Restrooms will have labels for easier filtering so that users can find a nearby restroom that will fulfill their needs. Users will also have the option to submit bathroom locations that they have found in order to increase the size of the database. In fact the bathroom locations will all be user provided.</p><p><a href="https://github.com/nyu-software-engineering/spring-2019-toilet-finder" target="_blank" id="giticon"><span class="fab fa-github fa-2x"></span></a></p>
+								Meal Mate - Web Application</h2>
+								<p>Meal Mate is a web application used to organize and plan your meals! This application also lets users search through a collection of hundreds of recipes, whilst also letting the user add their own favorite recipes to the collection. The tech stack was divided into two parts, the first being a RESTful API for the recipes using Node.js to build the server and PostgreSQL to store and manage the data. This API was then deployed and hosted using Heroku. The main application uses Firebase for the backend, user authentication and hosting, and utilizes React, Redux and Bootstrap for the frontend. Meal Mate was built by myself and Chris Yuan.</p><p><a href="https://github.com/nicholasruan/meal-planner" target="_blank" id="giticon"><span class="fab fa-github fa-2x" style="padding-right: 20px;"></span></a><a href="https://www.mealmate.me/" target="_blank" id="giticon"><span class="fas fa-desktop fa-2x"></span></a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>Project 2<br />
-								Photography Portfolio - Web Application</h2>
-								<p>I have a passion for photography and what intrigues me the most about this field is the endless images I can create with my camera and mind. Photography, to me is about capturing raw emotion and beauty in life and nature. This photography portfolio was built to display all my photographs in an elegant and beautiful manner. I built this using React and Bootstrap, with some additional CSS for styling. For hosting, I used Firebase's web hosting features.</p><p><a href="https://github.com/nicholasruan/nlrphoto" target="_blank" id="giticon"><span class="fab fa-github fa-2x" style="padding-right: 20px;"></span></a><a href="http://nlart.me" target="_blank" id="giticon"><span class="fas fa-desktop fa-2x"></span></a></p>
+								Toilet Finder - Mobile Application (Android / iOS)</h2>
+								<p>This application can be thought of as a map of all bathroom locations in the world. It works by using Google Maps and a database of user submitted locations of restrooms. Restrooms will have labels for easier filtering so that users can find a nearby restroom that will fulfill their needs. Users will also have the option to submit bathroom locations that they have found in order to increase the size of the database. In fact the bathroom locations will all be user provided.</p><p><a href="https://github.com/nyu-software-engineering/spring-2019-toilet-finder" target="_blank" id="giticon"><span class="fab fa-github fa-2x"></span></a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>Project 3<br />
+								Muddy Paws Rescue - Web Application</h2>
+								<p>Helped to revamp New York City nonprofit dog shelter, Muddy Paws Rescue's, website. The website was built with Squarespace, and also contains lots of custom code to implement some features that Squarespace doesn't support. Technologies used were: Bootstrap, HTML5, CSS3, jQuery, and JavaScript.</p><p><a href="https://www.muddypawsrescue.org" target="_blank" id="giticon"><span class="fas fa-desktop fa-2x"></span></a></p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/pic04.jpg" alt="" /></div><div class="content">
+								<h2>Project 4<br />
+								Photography Portfolio - Web Application</h2>
+								<p>I have a passion for photography and what intrigues me the most about this field is the endless images I can create with my camera and mind. Photography, to me is about capturing raw emotion and beauty in life and nature. This photography portfolio was built to display all my photographs in an elegant and beautiful manner. I built this using React and Bootstrap, with some additional CSS for styling. For hosting, I used Firebase's web hosting features.</p><p><a href="https://github.com/nicholasruan/nlrphoto" target="_blank" id="giticon"><span class="fab fa-github fa-2x" style="padding-right: 20px;"></span></a><a href="http://nlart.me" target="_blank" id="giticon"><span class="fas fa-desktop fa-2x"></span></a></p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/pic05.jpg" alt="" /></div><div class="content">
+								<h2>Project 5<br />
 								Movie Wishlist - Web Application</h2>
 								<p>Coming Soon...</p>
 								<p><a href="#" target="_blank" id="giticon"><span class="fab fa-github fa-2x" style="padding-right: 20px;"></span></a><a href="#" target="_blank" id="giticon"><span class="fas fa-desktop fa-2x"></span></a></p>
