--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>Project 2<br />
 								Toilet Finder - Mobile Application (Android / iOS)</h2>
-								<p>This application can be thought of as a map of all bathroom locations in the world. It works by using Google Maps and a database of user submitted locations of restrooms. Restrooms will have labels for easier filtering so that users can find a nearby restroom that will fulfill their needs. Users will also have the option to submit bathroom locations that they have found in order to increase the size of the database. In fact the bathroom locations will all be user provided.</p><p><a href="https://github.com/nyu-software-engineering/spring-2019-toilet-finder" target="_blank" id="giticon"><span class="fab fa-github fa-2x"></span></a></p>
+								<p>This application can be thought of as a map of all bathroom locations in the world. It works by using the Google Maps and a database of user submitted locations of restrooms. Restrooms have included labels for easier filtering so that users can find a nearby restroom that will fulfill their needs. All bathrooms are crowd sourced through the process of being uploaded to the database by app users. These toilet markers are then loaded on the maps interface. Technologies used to build this application: React Native, Expo, Google Maps API, Amazon DynamoDB</p><p><a href="https://github.com/nyu-software-engineering/spring-2019-toilet-finder" target="_blank" id="giticon"><span class="fab fa-github fa-2x"></span></a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>Project 3<br />
 								Muddy Paws Rescue - Web Application</h2>
-								<p>Helped to revamp New York City nonprofit dog shelter, Muddy Paws Rescue's, website. The website was built with Squarespace, and also contains lots of custom code to implement some features that Squarespace doesn't support. Technologies used were: Bootstrap, HTML5, CSS3, jQuery, and JavaScript.</p><p><a href="https://www.muddypawsrescue.org" target="_blank" id="giticon"><span class="fas fa-desktop fa-2x"></span></a></p>
+								<p>I helped to revamp New York City nonprofit dog shelter, Muddy Paws Rescue's, website. The website was built with Squarespace, and also contains lots of custom code to implement some features that Squarespace doesn't support. Technologies used were: Bootstrap, HTML5, CSS3, jQuery, and JavaScript.</p><p><a href="https://www.muddypawsrescue.org" target="_blank" id="giticon"><span class="fas fa-desktop fa-2x"></span></a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic04.jpg" alt="" /></div><div class="content">
 								<h2>Project 4<br />
 								Photography Portfolio - Web Application</h2>
-								<p>I have a passion for photography and what intrigues me the most about this field is the endless images I can create with my camera and mind. Photography, to me is about capturing raw emotion and beauty in life and nature. This photography portfolio was built to display all my photographs in an elegant and beautiful manner. I built this using React and Bootstrap, with some additional CSS for styling. For hosting, I used Firebase's web hosting features.</p><p><a href="https://github.com/nicholasruan/nlrphoto" target="_blank" id="giticon"><span class="fab fa-github fa-2x" style="padding-right: 20px;"></span></a><a href="http://nlart.me" target="_blank" id="giticon"><span class="fas fa-desktop fa-2x"></span></a></p>
+								<p>I have a passion for photography and what intrigues me the most about this artform is the endless images I can create with my camera and mind. Photography, to me is about capturing raw emotion and beauty in life and nature. This photography portfolio was built to display all my photographs in an elegant and accessible manner. I built this using React and Bootstrap, with some additional CSS for styling. For hosting, I used Firebase's web hosting features.</p><p><a href="https://github.com/nicholasruan/nlrphoto" target="_blank" id="giticon"><span class="fab fa-github fa-2x" style="padding-right: 20px;"></span></a><a href="http://nlart.me" target="_blank" id="giticon"><span class="fas fa-desktop fa-2x"></span></a></p>
 							</div>
 						</section>
 						<section class="spotlight">
