--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>Nicholas Ruan Portfolio</title>
 		<meta charset="utf-8" />
+		<meta name="google-site-verification" content="u1sUMp-zFaQPYA0XbLyn4SZgubH6VnPng49tjVX9fPg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
