--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
 								<p>I have a passion for photography and what intrigues me the most about this artform is the endless images I can create with my camera and mind. Photography, to me is about capturing raw emotion and beauty in life and nature. This photography portfolio was built to display all my photographs in an elegant and accessible manner. I built this using React and Bootstrap, with some additional CSS for styling. For hosting, I used Firebase's web hosting features.</p><p><a href="https://github.com/nicholasruan/nlrphoto" target="_blank" id="giticon"><span class="fab fa-github fa-2x" style="padding-right: 20px;"></span></a><a href="http://nlart.me" target="_blank" id="giticon"><span class="fas fa-desktop fa-2x"></span></a></p>
 							</div>
 						</section>
-						<section class="spotlight">
+<!-- 						<!-- <section class="spotlight">
 							<div class="image"><img src="images/pic05.jpg" alt="" /></div><div class="content">
 								<h2>Project 5<br />
 								Movie Wishlist - Web Application</h2>
 								<p>Coming Soon...</p>
 								<p><a href="#" target="_blank" id="giticon"><span class="fab fa-github fa-2x" style="padding-right: 20px;"></span></a><a href="#" target="_blank" id="giticon"><span class="fas fa-desktop fa-2x"></span></a></p>
 							</div>
-						</section>
+						</section> -->
 					</section>
 
 				<!-- Footer -->
