--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Nicholas Ruan</h2>
-							<p>Developer & Photographer<br />
+							<p>Full Stack Web Developer<br />
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
